# email-notifications

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  helpers.py  mailbot.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
Senders/: BarkSender.py  TelegramSender.py  __init__.py  bark_sender.py  base.py  telegram_sender.py
helpers/: messages.py  misc.py  strings.py
tools/: list_folders.py  test_sender.py
